# Artis.ai

./: PROJECT_ROADMAP.md  README.md  api_manager.py  app.py  autonomous_controller.py  autonomous_monitor.py  autonomous_optimizer.py  autonomous_system.py  backup_files.py  config.py  database.py  eth_monitor.py  eth_trader.py  extensions.py  gmgn_analyzer.py  kol_analyzer.py  llm_config.py  llm_connector.py  main.py  market_analysis.py  models.py  monitoring_base.py  profit_manager.py  pumpfun_analyzer.py  pyproject.toml  replit_zip_error_log.txt  risk_manager.py  routes.py  sentiment_analyzer.py  solana_health.py  solana_monitor.py  solana_token_monitor.py  spydefi_connector.py  spyfu_connector.py  technical_analysis.py  telegram_analyzer.py  telegram_monitor.py  test_eth_trader.py  test_pumpfun.py  test_wallet_setup.py  (+4 more)
attached_assets/: Pasted--last-check-2025-01-02T20-11-28-392963-message-All-validations-pas-1735848746872.txt  Pasted--operational-count-14-status-success-tools-event-impact-descri-1735857099555.txt  Pasted--status-success-timestamp-2025-01-02T20-06-10-286472-tools-health-monit-1735848419439.txt  Pasted--status-success-timestamp-2025-01-02T20-38-35-854606-tools-health-monitor-1735850361458.txt  Pasted--status-success-timestamp-2025-01-02T22-53-15-299156-tools-event-impact-1735858432586.txt  Pasted-AI10X-Trading-Bot-Performance-Overview-Technical-Indicators-RSI-Stochastic-RSI-Value-RSI-Signa-1735596446715.txt  Pasted-Crypto-Intelligence-Platform-System-Health-components-api-latency-0-1-status--1735847099483.txt  (+8 more)
templates/: base.html  dashboard.html
(+29 files in other folders)
