[project]
name = "repl-nix-aitradegenius"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-migrate>=4.0.7",
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.0",
    "numpy>=1.24.3",
    "pandas==2.0.3",
    "psycopg2-binary>=2.9.9",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.0",
    "ta>=0.11.0",
    "textblob>=0.18.0.post0",
    "tweepy>=4.14.0",
    "web3>=7.6.1",
    "base58>=2.1.1",
    "solana>=0.36.1",
    "cohere>=4.0.0",
    "transformers>=4.47.1",
    "flask-wtf>=1.2.2",
    "flask-login>=0.6.3",
    "flask-cors>=5.0.0",
    "openai>=1.0.0",
    "huggingface-hub>=0.19.0",
    "trafilatura>=2.0.0",
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.12.3",
    "python-dotenv>=1.0.1",
    "twilio>=9.4.1",
    "construct>=2.10.68",
    "psutil>=6.1.1",
    "eth-account>=0.13.4",
    "solders>=0.23.0",
    "flask-apscheduler>=1.13.1",
    "oauthlib>=3.2.2",
    "alembic>=1.14.0",
    "werkzeug>=3.1.3",
    "httpx>=0.28.1",
    "apify-client>=1.8.1",
]
